clusters/KC-Int/deployments/default/zigbee2mqtt/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt
          image: ghcr.io/koenkk/zigbee2mqtt:1.39.0
          volumeMounts:
            - name: pvc
              mountPath: /app/data
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: zigbee2mqtt
