clusters/KC-Int/deployments/default/zigbee2mqtt/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: zigbee2mqtt
spec:
    selector:
        app: zigbee2mqtt
    ports:
        - port: 8080
